--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -109,6 +109,9 @@
         <item>SUPL_MODE=1</item>
     </string-array>
 
+    <!-- Whether or not swipe up gesture's opt-in setting is available on this device -->
+    <bool name="config_swipe_up_gesture_setting_available">true</bool>
+
     <!-- ############################################################## -->
     <!-- ### DISPLAY                                                    -->
     <!-- ############################################################## -->
