--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -176,11 +176,7 @@
     <!-- The device supports freeform window management -->
     <bool name="config_freeformWindowManagement">true</bool>
 
-    <!-- Hide this setting because we are forcing it to be enabled in build.prop.
-         Note: This is declared in both values/config.xml and values-sw600dp/config.xml.
-               It is actually the latter definition that wins but overlay both
-               to be on the safe side.
-    -->
+    <!-- Enable lockscreen rotation by default -->
     <bool name="config_enableLockScreenRotation">true</bool>
 
     <!-- If true, the screen can be rotated via the accelerometer in all 4
